test/should-pass/fail/no-such-method-exception/project.rep
{
  'srcs' => [
    'exe.dk',
  ],
  'libs' => [
    '/usr/local/lib/libdakota-util.$so_ext',
  ],
  'name' => 'exe',
}
